Disable use of Mekanism Steel Casing for IF Machines
People get confused by this way too often cause it's the first recipe >:V

--- a/Client/overrides/config/industrialforegoing.cfg
+++ b/Client/overrides/config/industrialforegoing.cfg
@@ -11,7 +11,7 @@ general {
     B:useEnderIOFrames=true
 
     # Adds recipes using Mekanism Steel Casing [default: true]
-    B:useMekanismFrames=true
+    B:useMekanismFrames=false
 
     # Adds recipes using TeslaCoreLib frames [default: true]
     B:useOriginalFrames=true
