--- a/Client/overrides/config/midnight.cfg
+++ b/Client/overrides/config/midnight.cfg
@@ -74,7 +74,7 @@ general {
         B:hide_vignette_effect=true
 
         # If true, rifts will be rendered with custom shaders for standard effects. If false, a simpler (motionless) texture will be rendered. Default= true
-        B:rift_shaders=true
+        B:rift_shaders=false
     }
 
 }
