Disable Juggernaut pet
the Invincibility is rlly op :v

--- a/Client/overrides/config/inventorypets/inventorypets.cfg
+++ b/Client/overrides/config/inventorypets/inventorypets.cfg
@@ -34,7 +34,7 @@
     B:"Disable House"=false
     B:"Disable Illuminati"=false
     B:"Disable Iron Golem"=false
-    B:"Disable Juggernaut"=false
+    B:"Disable Juggernaut"=true
     B:"Disable Jukebox"=false
     B:"Disable Kwanzaa"=false
     B:"Disable Lead"=false
