Buff Thaumcraft Bosses into Champions
Thaumic Augmentation bosses are 2-Star, base TC bosses are 1-Star, except Giant Taintacle, which is 2.
Giant Taintacle always has Adapatable affix.

Entities that cannot get certain affixes:
Vortex: TAug Construct, TC/TAug Warden, Crimson Praetor
Reflecting: TAug Construct, TAug Warden
Knockback: Greater Crimson Portal
Jailer: TAug Construct, TAug Warden, Crimson Praetor
Hasty: TAug Construct, TAug Warden, Greater Crimson Portal, Giant Taintacle
Shielding: All 6
Plagued: TAug/TC Construct, TAug/TC Warden

--- a/Client/overrides/config/champions.cfg
+++ b/Client/overrides/config/champions.cfg
@@ -19,20 +19,20 @@ general {
         Fear
         Lord
         Burning Legion
-	Draconic
-	Gregorious
-	Avaricious
+		Draconic
+		Gregorious
+		Avaricious
      >
 
     # Additional names that will be added to the pool of names given to champions
     S:"Additional Champion Names" <
-	Quack
+		Quack
         Goat
         Emper
         Bread-Tea
         Corjaantje
         Kraken
-	Sparkly
+		Sparkly
      >
 
     # The range an active beacon will prevent champion spawns, 0 to disable
@@ -58,7 +58,14 @@ general {
         erebus:erebus.tarantula_mini_boss;2
         erebus:erebus.antlion_boss;3
         atum:pharaoh;4
-	illagers_plus:illager_king;3
+		illagers_plus:illager_king;3
+        thaumicaugmentation:eldritch_golem;2
+        thaumicaugmentation:eldritch_warden;2
+        thaumcraft:cultistportalgreater;1
+        thaumcraft:cultistleader;1
+        thaumcraft:eldritchwarden;1
+        thaumcraft:eldritchgolem;1
+        thaumcraft:taintaclegiant;2
      >
 
     # Set whether champions can spawn from mob spawners
