Add large dump of Tips from #tips-suggesstions in the Discord (#364)
* Add Tips mod + 8 Custom tips

Can be used to tell the player about custom changes and stuff on the loading screen, as shown by the examples in the config originally made for MCE Lite.

* Update tips.cfg

* Add large dump of Tips from #tips-suggesstions in the Discord

Some Tips have been tweaked to be more detailed or simpler, and Gold Color has also been added to most instances of Items that the Tips mention.

--- a/Client/overrides/config/tips.cfg
+++ b/Client/overrides/config/tips.cfg
@@ -8,13 +8,71 @@ general {
     S:customTips <
 	Join our Discord for help and support! §9https://discord.gg/ZS6FRR3§r
 	Osmium and Nuclearcraft Ores are only found in The Beneath
-	In MC Eternal, the Atum, Erebus, and Aurorian Dimensions can only be accessed through Advanced Rocketry
+  In MC Eternal, the Atum, Erebus, and Aurorian Dimensions can only be accessed through Advanced Rocketry
 	Legends say the Erebus holds a certain mineral with great power...
 	Legends say the Aurorian holds powerful foes, and a certain powerful Alloy...
 	Magic is the key to incredible power!
 	Tech is the key to tons of resources!
 	In MC Eternal, Skystone Meteorites are only found in The Beneath
 	Never touched a certain mod before? Join the Discord for help!
+	In MC Eternal, the §6Atum§r, §6Erebus§r, and §6Aurorian§r Dimensions can only be accessed through Advanced Rocketry
+	Legends say the §6Erebus§r holds a certain mineral with great power...
+	Legends say the §6Aurorian§r holds powerful foes, and a certain powerful Alloy...
+	Magic is the key to incredible power!
+	Tech is the key to tons of resources!
+	In MC Eternal, §6Skystone Meteorites§r are only found in §6The Beneath§r
+	Never touched a certain mod before? Join the Discord for help!
+	Rule of Thumb: if there's no Casting recipe for a Tinkers' part, it's done in the Part Builder
+	§6Rad-X§r can be used to temporarily reduce your radiation intake
+	The §6Torch Launcher§r is very handy for cave exploring.
+	Most boss mobs have been heavily buffed, come prepared.
+	A §6Drop of Evil§r can help you make a easy mob farm, just how do you get it?
+	§6Task screens§r can be used to automate certain quests, handy for making coins.
+	Yes - we nerfed the kitchen sink :P
+	Flux Networks are an excellent way to wirelessly transmit power across long distances and between Dimensions
+	No! Don't put that full backpack in your ME System!
+	Join our discord!
+	You can't tame Rats from a Rat on Arrow
+	Most stuff from §6Cyclic§r is Laggy or Buggy
+	Rats and Golems are great critter alternatives to machines and wires for automation
+	Can't wait for the Halloween update!
+	Many §6CareerBees§r bees have interesting and useful effects
+	Weapons made from §6Opinium cores§r can double any enchantment
+	§mDont§r Touch §6Creative Spikes§r
+	Big Buildings rarely mean friends
+	§cThe Multishot Enchantment is disabled
+	In §6the Betweenlands§r, tools from the outside the dimension are much less effective
+	§6Time in a Bottle§r collects real-world time you can use to speed up blocks in the world!
+	Try new mods! You might find new ways to accomplish ordinary tasks!
+	§6The Wither§r now has friends, and is way stronger, prepare before your first fight.
+	GP is a special type of player-linked energy introduced by §6Extra Utilities 2§r
+	You can store AE upgrade cards in the §6Network Tool§r
+	Different types of §6Conduits from EnderIO§r can fit in the same blockspace
+	Placing a diamond on the latch of an EnderStorage §6Ender Chest§r or Tank will change it from global to player-specific
+	You cannot link an ME-type P2P tunnel through another ME-type P2P tunnel
+	§6XNet§r is a Cable system which can transport almost any type of resource
+	The §6Tinker Tank§r is a large multiblock storage that can store multiple types of fluid without mixing
+	Dont like to build? use the §6Copy-Paste Gadget§r and go to §9reddit.com/r/9x9§r
+	Need help with §6Thaumcraft§r? Ask Emperdog#4370
+	Look out for the §6Plague§r! if you become infected, you won't be able to regenerate health until the effect has worn off!
+	The §6Reservoir§r from Thermal Expansion can be used as a larger bucket for most crafting recipes requiring fluid
+	The §6Holding enchantment§r increases the capacity of most Thermal Expansion storages including Satchels, Reservoirs, Energy cells, and more!
+	Do not treat Thaumcraft's §6Crucible§r as a garbage can!
+	Multiblocks can exhibit unexpected behaviour when they cross chunks. Press F9 twice to see chunk borders.
+	§6Trash cans§r come in handy when dealing with unwanted by-products
+	EnderIO's §6Aversion Obelisk§r can block spawns of specific mobs.
+	AE2 is an extremely versatile storage system mod that can be automated all on its own
+	Dont put backpacks in backpacks... And do not put containers that store items into your ME system - you might have a hard time extracting them again
+	Claiming chunks will prevent explosions from breaking blocks. Always claim your chunks!
+	§9Don't forget to stay Hydrated!
+	Rats don't need oxygen to breathe in Space
+	Craft §6Small Storage Crates§r for better early game storage!
+	If you can't find the type of Wand you want, maybe you can find a Wizard who will sell you one.
+	If you need help, the §6MCE Discord§r is the best place! Check faq, tips, client-questions-and-issues, and server-questions-and-issues, or come hang out in mce-general!
+	Remember, there's no place like home! Use /sethome in your base so when you're done exploring out and about, you can use /home to warp back.
+	Some blocks will output an on or off signal for a comparator when active. Some even have this function built in.
+	Mekanism's §6Gauge Dropper§r can be used to manually remove and place fluids from one machine to another.
+	The §6Ancient Furnace§r from random things, when powered with a §6Nether Star§r through the top, will warm up a VERY large area around it
      >
 
     # The color of the actual tip text. [default: FFFFFF]
