Buff Thaumcraft Bosses into Champions (#366)
* Buff Thaumcraft Bosses into Champions

Thaumic Augmentation bosses are 2-Star, base TC bosses are 1-Star, except Giant Taintacle, which is 2.
Giant Taintacle always has Adapatable affix.

Entities that cannot get certain affixes:
Vortex: TAug Construct, TC/TAug Warden, Crimson Praetor
Reflecting: TAug Construct, TAug Warden
Knockback: Greater Crimson Portal
Jailer: TAug Construct, TAug Warden, Crimson Praetor
Hasty: TAug Construct, TAug Warden, Greater Crimson Portal, Giant Taintacle
Shielding: All 6
Plagued: TAug/TC Construct, TAug/TC Warden

* fix formatting

--- a/Client/overrides/config/champions.cfg
+++ b/Client/overrides/config/champions.cfg
@@ -59,6 +59,13 @@ general {
         erebus:erebus.antlion_boss;3
         atum:pharaoh;4
 	illagers_plus:illager_king;3
+        thaumicaugmentation:eldritch_golem;2
+        thaumicaugmentation:eldritch_warden;2
+        thaumcraft:cultistportalgreater;1
+        thaumcraft:cultistleader;1
+        thaumcraft:eldritchwarden;1
+        thaumcraft:eldritchgolem;1
+        thaumcraft:taintaclegiant;2
      >
 
     # Set whether champions can spawn from mob spawners
@@ -85,7 +92,7 @@ general {
 
     # Sets the loot drops from champions if loot source is set to CONFIG, format is tier;modid:name;metadata;stacksize;enchant(true/false);weight
     S:"Loot Drops" <
-		rats:cheese;5
+	rats:cheese;5
         minecraft:diamond;1
         minecraft:gold_ingot;3
      >
