--- a/Client/overrides/config/laser_drill_ores/appliedenergistics2_ores.json
+++ b/Client/overrides/config/laser_drill_ores/appliedenergistics2_ores.json
@@ -5,14 +5,14 @@
     "rarity" : [
       {
         "whitelist": "",
-        "blacklist": "minecraft:hell, minecraft:sky",
+        "blacklist": "minecraft:hell, minecraft:sky, biomesoplenty:corrupted_sands, biomesoplenty:fungi_forest, biomesoplenty:phantasmagoric_inferno, biomesoplenty:undergarden, biomesoplenty:visceral_heap",
         "depth_min": 20,
         "depth_max": 63,
         "weight": 3
       },
       {
         "whitelist": "",
-        "blacklist": "minecraft:hell, minecraft:sky",
+        "blacklist": "minecraft:hell, minecraft:sky, biomesoplenty:corrupted_sands, biomesoplenty:fungi_forest, biomesoplenty:phantasmagoric_inferno, biomesoplenty:undergarden, biomesoplenty:visceral_heap",
         "depth_min": 0,
         "depth_max": 255,
         "weight": 1
@@ -25,7 +25,7 @@
     "rarity" : [
       {
         "whitelist": "",
-        "blacklist": "minecraft:hell, minecraft:sky",
+        "blacklist": "minecraft:hell, minecraft:sky, biomesoplenty:corrupted_sands, biomesoplenty:fungi_forest, biomesoplenty:phantasmagoric_inferno, biomesoplenty:undergarden, biomesoplenty:visceral_heap",
         "depth_min": 20,
         "depth_max": 63,
         "weight": 1
