--- a/Client/overrides/config/laser_drill_ores/biomesoplenty_ores.json
+++ b/Client/overrides/config/laser_drill_ores/biomesoplenty_ores.json
@@ -5,7 +5,7 @@
     "rarity" : [
       {
         "whitelist": "",
-        "blacklist": "minecraft:hell, minecraft:sky",
+        "blacklist": "minecraft:hell, minecraft:sky, biomesoplenty:corrupted_sands, biomesoplenty:fungi_forest, biomesoplenty:phantasmagoric_inferno, biomesoplenty:undergarden, biomesoplenty:visceral_heap",
         "depth_min": 0,
         "depth_max": 255,
         "weight": 1
@@ -31,7 +31,7 @@
     "rarity" : [
       {
         "whitelist": "",
-        "blacklist": "minecraft:hell, minecraft:sky",
+        "blacklist": "minecraft:hell, minecraft:sky, biomesoplenty:corrupted_sands, biomesoplenty:fungi_forest, biomesoplenty:phantasmagoric_inferno, biomesoplenty:undergarden, biomesoplenty:visceral_heap",
         "depth_min": 0,
         "depth_max": 255,
         "weight": 2
@@ -44,7 +44,7 @@
     "rarity" : [
       {
         "whitelist": "",
-        "blacklist": "minecraft:hell, minecraft:sky",
+        "blacklist": "minecraft:hell, minecraft:sky, biomesoplenty:corrupted_sands, biomesoplenty:fungi_forest, biomesoplenty:phantasmagoric_inferno, biomesoplenty:undergarden, biomesoplenty:visceral_heap",
         "depth_min": 0,
         "depth_max": 255,
         "weight": 2
