remove another stupid cheap steel

--- a/Client/overrides/config/unidict/UniDict.cfg
+++ b/Client/overrides/config/unidict/UniDict.cfg
@@ -253,6 +253,7 @@ resources {
 		unidict:ingotiron_x6_shape.aaaa aaaa
 		unidict:duststeel_x1_size.5
 		unidict:duststeel_x2_size.3
+		icbmclassic:parts/clump.steel
      >
 
     # Resources to be black-listed.
