--- a/Client/overrides/config/cyclicmagic.cfg
+++ b/Client/overrides/config/cyclicmagic.cfg
@@ -507,7 +507,7 @@ cyclicmagic {
         B:"Enderman Pickup Blocker"=true
 
         # When an entity dies that is named with a tag, it drops the nametag [default: true]
-        B:"Name Tag Death"=true
+        B:"Name Tag Death"=false
     }
 
     ##########################################################################################################
