--- a/Client/overrides/config/tombstone.cfg
+++ b/Client/overrides/config/tombstone.cfg
@@ -513,12 +513,14 @@ general {
 
     # Beneficial effects that can't used by certain features such as ankh of pray, lollipop, scroll of preservation, alchemy perk and magic siphon enchantment
     S:unhandledBeneficialEffects <
+    
         tombstone:ghostly_shape
         tombstone:preservation
         tombstone:exorcism
         extraalchemy
         astralsorcery:potiontimefreeze
         xreliquary:flight_potion
+        potioncore:chance
      >
 
     # Harmful effects that can't used by certain features such as tablet of cupidity and the enchantment plague bringer
