--- a/Client/overrides/config/tombstone.cfg
+++ b/Client/overrides/config/tombstone.cfg
@@ -403,6 +403,7 @@ general {
         extraalchemy
         astralsorcery:potiontimefreeze
         xreliquary:flight_potion
+        potioncore
      >
 
     # The chance that a player receives an already enchanted Grave's Key on death
