--- a/Client/overrides/config/tombstone.cfg
+++ b/Client/overrides/config/tombstone.cfg
@@ -403,6 +403,9 @@ general {
         extraalchemy
         astralsorcery:potiontimefreeze
         xreliquary:flight_potion
+        potioncore
+        cyclicmagic
+        extrautils2
      >
 
     # The chance that a player receives an already enchanted Grave's Key on death
