--- a/Client/overrides/config/ebwizardry/ebwizardry.cfg
+++ b/Client/overrides/config/ebwizardry/ebwizardry.cfg
@@ -1782,6 +1782,120 @@ tweaks {
 
     # List of registry names of items which can be placed in a bookshelf, in addition to the defaults. Item names are not case sensitive. For mod items, prefix with the mod ID (e.g. thaumcraft:thaumonomicon).
     S:bookItems <
+		minecraft:book
+		minecraft:enchanted_book
+		minecraft:written_book
+		minecraft:writable_book
+		minecraft:knowledge_book
+		quark:ancient_tome
+		inspirations:books[*]
+		forestry:catalogue
+		forestry:book_forester
+		immersiveengineering:tool[3]
+		tconstruct:book
+		conarm:book
+		rustic:book
+		akashictome:tome
+		ftbquests:book
+		patchouli:guide_book
+		vampirism:vampire_book
+		ebwizardry:arcane_tome
+		ebwizardry:spell_book
+		ebwizardry:ruined_spell_book
+		ebwizardry:wizard_handbook
+		ancientspellcraft:ancient_spell_book
+		ancientspellcraft:ancient_spellcraft_spell_book
+		actuallyadditions:item_booklet
+		ancientwarfare:research_book
+		cookingforblockheads:recipe_book
+		cyclicmagic:book_ender
+		openblocks:info_book
+		opencomputers:tool
+		practicallogistics2:plguide
+		levelup2:skillbook
+		bibliocraft:stockroomcatalog
+		rats:plague_tome
+		thaumicaugmentation:eldritch_lock_key
+		tfspellpack:charm_accursed_tome
+		minecolonies:ancienttome
+		thaumadditions:knowledge_tome
+		guideapi:cyclicmagic-guide
+		ebwizardry:charm_experience_tome
+		thermalfoundation:tome_experience
+		xreliquary:alkahestry_tome
+		buildcraftlib:guide_note
+		buildcraftlib:guide
+		bountifulbaubles:modifierbook
+		bibliocraft:recipebook
+		bibliocraft:biblioredbook
+		bibliocraft:slottedbook
+		bibliocraft:bigbook
+		bibliocraft:atlasbook
+		bloodmagic:sanguine_book
+		thermalfoundation:tome_lexicon
+		botania:lexicon
+		tombstone:book_of_disenchantment
+		levelup2:respecbook
+		agricraft:journal
+		extrautils2:book
+		industrialforegoing:book_manual
+		tfspellpack:twilight_spell_book
+		ancientwarfare:manual
+		ancientspellcraft:charm_elemental_grimoire
+		hammercore:manual
+		astralsorcery:itemjournal
+		bloodmagic:experience_tome
+		yoyos:book
+		xnet:xnet_manual
+		thebetweenlands:manual_hl
+		rftools:rftools_manual
+		rftoolsdim:rftoolsdim_manual
+		rftools:rftools_shape_manual
+		villagenames:mineshaftbook
+		villagenames:fortressbook
+		villagenames:desertpyramidbook
+		villagenames:villagebook
+		villagenames:swamphutbook
+		villagenames:templebook
+		villagenames:jungletemplebook
+		villagenames:igloobook
+		villagenames:strongholdbook
+		villagenames:monumentbook
+		villagenames:mansionbook
+		villagenames:endcitybook
+		villagenames:moonvillagebook
+		villagenames:koentusvillagebook
+		villagenames:nibiruvillagebook
+		villagenames:fronosvillagebook
+		villagenames:abandonedbasebook
+		simplycats:cat_book
+		solcarrot:food_book
+		techreborn:techmanuel
+		thaumcraft:thaumonomicon
+		thaumcraft:curio
+		totemic:totempedia
+		ancientwarfareautomation:worksite_upgrade
+		bewitchment:grimoire_magia
+		bewitchment:bastards_grimoire
+		bibliocraft:testeritem
+		simplycats:certificate
+		forestry:letters
+		randomthings:enderletter
+		erebus:rolled_newspaper
+		integrateddynamics:on_the_dynamics_of_integration
+		cyclicmagic:tool_trade
+		dungeontactics:dungeonpedia_volume_1
+		dungeontactics:dungeonpedia_volume_2
+		dungeontactics:dungeonpedia_volume_3
+		dungeontactics:dungeonpedia_volume_4
+		dungeontactics:dungeonpedia_volume_5
+		dungeontactics:dungeonpedia_volume_6
+		dungeontactics:dungeonpedia_volume_7
+		dungeontactics:dungeonpedia_volume_8
+		dungeontactics:dungeonpedia_volume_9
+		stupidthings:item_catalog
+		fossil_dinopedia
+		iceandfire:bestiary
      >
 
     # The maximum number of blocks a bookshelf can be from an arcane workbench or lectern to be able to link to it.
