--- a/Client/overrides/config/tombstone.cfg
+++ b/Client/overrides/config/tombstone.cfg
@@ -406,6 +406,12 @@ general {
         potioncore
         cyclicmagic
         extrautils2
+        ancientspellcraft
+        ebwizardry
+        roots
+        champions
+        botania
+        bloodmagic
      >
 
     # The chance that a player receives an already enchanted Grave's Key on death
