Disable Curse of Enfeeblement
Can oneshot anything as long as the hitbox isn't janky :V
electroblob did a bit of a silly i guess

--- a/Client/overrides/config/ebwizardry.cfg
+++ b/Client/overrides/config/ebwizardry.cfg
@@ -355,7 +355,7 @@ spells {
     B:"ebwizardry:cure_effects"=true
 
     # "He was suddenly weakened, as if the life had been wrenched from within him." - Testimony of the only person known to have encountered a member of the soulwalker cult and survived.
-    B:"ebwizardry:curse_of_enfeeblement"=true
+    B:"ebwizardry:curse_of_enfeeblement"=false
 
     # Causes the target's soul to be inextricably bound to that of the caster, meaning all damage dealt to the caster is also dealt to the victim. Lasts until either the victim or the caster dies.
     B:"ebwizardry:curse_of_soulbinding"=true
