update treechop config
no more fakeplayer chopping! wooo yea baby

--- a/Client/overrides/config/treechop.cfg
+++ b/Client/overrides/config/treechop.cfg
@@ -3,64 +3,224 @@
 ~CONFIG_VERSION: 0.2
 
 1-general {
-    # Whether players can deactivate chopping e.g. by sneaking [default: true]
     B:canChooseNotToChop=true
-
-    # Whether this mod is enabled or not [default: true]
     B:enabled=true
 }
 
 
 2-default_player_settings {
-    # Default setting for whether or not the user wishes to chop (can be toggled in-game) [default: true]
     B:choppingEnabled=true
-
-    # Default setting for whether or not the user wishes to fell tree when chopping (can be toggled in-game) [default: true]
     B:fellingEnabled=true
-
-    # Whether to ignore trees without connected leaves [default: false]
     B:onlyChopTreesWithLeaves=true
-
-    # Default setting for the effect that sneaking has on chopping (can be cycled in-game)
-    # Options: NONE, INVERT_CHOPPING, INVERT_FELLING [default: INVERT_CHOPPING]
     S:sneakBehavior=INVERT_CHOPPING
 }
 
 
 3-tree-detection {
-    # Whether to destroy leaves when a tree is felled [default: true]
+    B:breakLeaves=true
+    S:choppingToolsBlacklist=mekanism:atomic_disassembler,
+    S:leavesBlocks=treeLeaves,
+    S:logBlocks=logWood,
+    I:maxBreakLeavesDistance=4
+    I:maxNumLeavesBlocks=8096
+    I:maxNumTreeBlocks=100
+}
+
+
+4-chop-counting {
+    S:chopCountScale=1.0
+    S:chopCountingMethod=LOGARITHMIC
+}
+
+
+chop-counting {
+    # Method to use for computing the number of chops needed to fell a tree
+    # Options: LINEAR, LOGARITHMIC [default: LOGARITHMIC]
+    S:algorithm=LOGARITHMIC
+
+    # Whether felling a tree can require more chops than the number of blocks in the tree
+    B:canRequireMoreChopsThanBlocks=false
+
+    # How to round the number of chops needed to fell a tree; this is more meaningful for smaller trees
+    # Options: DOWN, NEAREST, UP [default: NEAREST]
+    S:rounding=NEAREST
+
+    ##########################################################################################################
+    # logarithmic
+    #--------------------------------------------------------------------------------------------------------#
+    # See https://github.com/hammertater/treechop/#logarithmic
+    ##########################################################################################################
+
+    logarithmic {
+        # Determines the number of chops required to fell a tree; higher values require more chops for bigger trees [range: 0.0 ~ 10000.0, default: 10.0]
+        S:a=10.0
+    }
+
+    ##########################################################################################################
+    # linear
+    #--------------------------------------------------------------------------------------------------------#
+    # See https://github.com/hammertater/treechop/#linear
+    ##########################################################################################################
+
+    linear {
+        # The base number of chops required to fell a tree regardless of its size [range: -10000.0 ~ 10000.0, default: 0.0]
+        S:baseNumChops=0.0
+
+        # The number of chops per block required to fell a tree; if chopsPerBlock = 0.5, it will take 50 chops to fell a 100 block tree [range: 0.0 ~ 7.0, default: 1.0]
+        S:chopsPerBlock=1.0
+    }
+
+}
+
+
+compatibility {
+
+    general {
+        # Whether to prevent infinite loops when chopping; fixes crashes when using modded items that break multiple blocks
+        B:preventChopRecursion=true
+
+        # Whether to prevent chopping during right-click actions
+        B:preventChoppingOnRightClick=false
+
+        blacklist {
+            # Whether the listed items should be blacklisted or whitelisted
+            # Options: BLACKLIST, WHITELIST [default: BLACKLIST]
+            S:blacklistOrWhitelist=BLACKLIST
+
+            # Comma-separated list of items that should not chop when used to break a log
+            # Ore dictionary names are also acceptable [default: mekanism:atomic_disassembler,]
+            S:choppingToolsBlacklist=mekanism:atomic_disassembler,botania:terra_axe
+        }
+
+        specific {
+            # Whether to enable compatibility with ProjectMMO; for example, award XP for chopping
+            # See https://www.curseforge.com/minecraft/mc-mods/project-mmo
+            B:projectMMO=true
+        }
+
+        ##########################################################################################################
+        # fake-player-chop-settings
+        #--------------------------------------------------------------------------------------------------------#
+        # The chop settings used by non-player entities, such as robots
+        ##########################################################################################################
+
+        fake-player-chop-settings {
+            # Use with caution! May cause conflicts with some mods, e.g. https://github.com/hammertater/treechop/issues/71
+            B:choppingEnabled=false
+
+            # Felling only matters if chopping is enabled; probably best to leave this on
+            B:fellingEnabled=true
+            B:treesMustHaveLeaves=true
+        }
+
+    }
+
+}
+
+
+default-player-settings {
+
+    chopping {
+        # Whether to enable chopping when in creative mode (even when false, sneaking can still enable chopping)
+        B:chopInCreativeMode=true
+
+        # Default setting for whether or not the user wishes to chop (can be toggled in-game)
+        B:choppingEnabled=true
+
+        # Default setting for whether or not the user wishes to fell tree when chopping (can be toggled in-game)
+        B:fellingEnabled=true
+
+        # Default setting for the effect that sneaking has on chopping (can be cycled in-game)
+        # Options: NONE, INVERT_CHOPPING, INVERT_FELLING [default: INVERT_CHOPPING]
+        S:sneakBehavior=INVERT_CHOPPING
+
+        # Whether to ignore trees without connected leaves
+        B:treesMustHaveLeaves=true
+    }
+
+    visuals {
+
+        chopping-indicator {
+            # Whether to show an on-screen icon indicating whether targeted blocks can be chopped
+            B:enabled=true
+
+            # Horizontal location of the indicator relative to the player's crosshairs; positive values move the indicator to the right [range: -256 ~ 256, default: 16]
+            I:xOffset=16
+
+            # Vertical location of the indicator relative to the player's crosshairs; positive values move the indicator down [range: -256 ~ 256, default: 0]
+            I:yOffset=0
+        }
+
+    }
+
+}
+
+
+permissions {
+    # Whether this mod is enabled or not
+    B:enabled=true
+
+    chopping-enabled {
+        B:canBeFalse=true
+        B:canBeTrue=true
+    }
+
+    felling-enabled {
+        B:canBeFalse=true
+        B:canBeTrue=true
+    }
+
+    sneak-behavior {
+        B:canBeInvertChopping=true
+        B:canBeInvertFelling=true
+        B:canBeNone=true
+    }
+
+    tree-must-have-leaves {
+        B:canBeFalse=true
+        B:canBeTrue=true
+    }
+
+    chop-in-creative-mode {
+        B:canBeFalse=true
+        B:canBeTrue=true
+    }
+
+}
+
+
+settings-screen {
+    # Whether to show chat confirmations when using hotkeys to change chop settings
+    B:showFeedbackMessages=true
+
+    # Whether to show in-game options for enabling and disable felling
+    B:showFellingOptions=false
+}
+
+
+tree-detection {
+    # Whether to destroy leaves when a tree is felled
     B:breakLeaves=true
 
-    # List of items that should not chop when used to break a log
-    # Ore dictionary names are also acceptable [default: mekanism:atomic_disassembler,]
-    S:choppingToolsBlacklist=mekanism:atomic_disassembler,
+    # Whether non-decayable leaves are ignored when detecting leaves
+    B:ignorePersistentLeaves=true
 
-    # Blocks that are automatically broken when attached to a felled tree and breakLeaves=true
+    # Comma-separated list of blocks that are automatically broken when attached to a felled tree and breakLeaves=true
     # Ore dictionary names are also acceptable [default: treeLeaves,]
     S:leavesBlocks=treeLeaves,
 
-    # Blocks that can be chopped
+    # Comma-separated list of blocks that can be chopped
     # Ore dictionary names are also acceptable [default: logWood,]
     S:logBlocks=logWood,
 
     # Maximum distance from tree blocks to destroy leaves blocks when felling (Note: smart leaves destruction is not supported in 1.12.2) [range: 0 ~ 16, default: 4]
     I:maxBreakLeavesDistance=4
 
-    # Maximum number of leaves block that can destroyed when a tree is felled [range: 0 ~ 8096, default: 8096]
-    I:maxNumLeavesBlocks=8096
+    # Maximum number of leaves block that can destroyed when a tree is felled [range: 1 ~ 8096, default: 1024]
+    I:maxNumLeavesBlocks=1024
 
-    # Maximum number of log block that can be detected to belong to one tree [range: 0 ~ 8096, default: 8096]
-    I:maxNumTreeBlocks=100
-}
-
-
-4-chop-counting {
-    # Scales the number of chops (rounding down) required to fell a tree; with chopCountingMethod=LINEAR, this is exactly the number of chops per block [range: 0.0 ~ 1024.0, default: 1.0]
-    S:chopCountScale=1.0
-
-    # Method to use for computing the number of chops needed to fell a tree
-    # Options: LINEAR, LOGARITHMIC [default: LOGARITHMIC]
-    S:chopCountingMethod=LOGARITHMIC
+    # Maximum number of log block that can be detected to belong to one tree [range: 1 ~ 8096, default: 512]
+    I:maxNumTreeBlocks=512
 }
 
 
