increase EBWizardry lectern/bench search radius
lets you build an actual library or something to store your books in

--- a/Client/overrides/config/ebwizardry/ebwizardry.cfg
+++ b/Client/overrides/config/ebwizardry/ebwizardry.cfg
@@ -1899,7 +1899,7 @@ tweaks {
      >
 
     # The maximum number of blocks a bookshelf can be from an arcane workbench or lectern to be able to link to it.
-    I:bookshelfSearchRadius=4
+    I:bookshelfSearchRadius=16
 
     # List of registry names of items which wizard trades can use as currency (in the first slot; the second slot is unaffected). Each entry in this list should consist of an item registry name, followed by a single space, then an integer which defines the 'value' of the item. Higher values mean fewer of that currency item are required for a given trade.
     S:currencyItems <
