--- a/Client/overrides/config/unidict/UniDict.cfg
+++ b/Client/overrides/config/unidict/UniDict.cfg
@@ -35,7 +35,7 @@ general {
      >
 
     # Kinds listed here won't be hidden in JEI.
-    # Only works if keepOneEntry is false. [default: [ore]]
+    # Only works if Entry is false. [default: [ore]]
     S:autoHideInJEIKindBlackList <
         ore
      >
@@ -231,6 +231,7 @@ resources {
         bewitchment
         mekanism
         immersiveengineering
+	thaumcraft
         techreborn
      >
 
