--- a/Client/overrides/config/unidict/UniDict.cfg
+++ b/Client/overrides/config/unidict/UniDict.cfg
@@ -77,6 +77,7 @@ general {
     # Must be the exact modID. [default: ]
     S:keepOneEntryModBlackList <
         bewitchment
+	chisel
      >
 
     # Enable this if you have mods that depend on UniDict but you don't like the unification. [default: false]
