disable grave pet
buggy anyway :v do you really want to lose most of your items (no you don't)

--- a/Client/overrides/config/inventorypets/inventorypets.cfg
+++ b/Client/overrides/config/inventorypets/inventorypets.cfg
@@ -28,7 +28,7 @@
     B:"Disable Flying Saddle"=false
     B:"Disable Furnace"=false
     B:"Disable Ghast"=false
-    B:"Disable Grave"=false
+    B:"Disable Grave"=true
     B:"Disable Hannukah"=false
     B:"Disable Heart"=false
     B:"Disable House"=false
