Update Elenai Dodge 2.cfg
Enable compatability HUD for elenai dodge

--- a/Client/overrides/config/Elenai Dodge 2.cfg
+++ b/Client/overrides/config/Elenai Dodge 2.cfg
@@ -19,7 +19,7 @@ general {
 
         hud {
             # Whether to enable compatibility mode for the HUD. If it isn't working as expected, try this.
-            B:"Compatibility HUD"=false
+            B:"Compatibility HUD"=true
 
             # Whether the GUI fades out when it is inactive.
             B:"Fadeout Inactive HUD"=false
